[gd_scene load_steps=2 format=2]

[ext_resource path="res://Entities/Enemies/BasicEnemyIdle.gd" type="Script" id=2]

[node name="Idle" type="Node"]
script = ExtResource( 2 )

[node name="AITimer" type="Timer" parent="."]
wait_time = 2.0

[node name="WalkTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true
[connection signal="timeout" from="AITimer" to="." method="_on_AITimer_timeout"]
[connection signal="timeout" from="WalkTimer" to="." method="_on_WalkTimer_timeout"]
